Linux/Windows: Remove NonInteractiveContainer from the profile chooser.

This CL replaces the NonInteractiveContainer class by a View class. The only
goal from NonInteractiveContainer was to return false from
CanProcessEventsWithinSubtree().

This view only contains a Label which has no interaction with the mouse. The
only difference is enabling tool tips.

BUG=674462

Review-Url: https://codereview.chromium.org/2633183002
Cr-Commit-Position: refs/heads/master@{#448228}

Former-commit-id: bce01de43097d69f127f2637d9c3398ff780462a